maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
    keepHandOnSideWall()
  }
  prendBiscuit

def keepHandOnSideWall(){
  avance()
  do {
    gauche()
  } while(estFaceMur()